Aggiunto pannello informazioni, Sistemati varie ripetizioni di codice

--- a/src/filmmanager/FilmManager.fxml
+++ b/src/filmmanager/FilmManager.fxml
@@ -27,7 +27,7 @@
             </Menu>
           <Menu mnemonicParsing="false" text="Aiuto">
             <items>
-              <MenuItem mnemonicParsing="false" text="Informazioni" />
+              <MenuItem mnemonicParsing="false" onAction="#onClickInformazioni" text="Informazioni" />
             </items>
           </Menu>
         </menus>
